# quail

./: .gitignore  Cargo.toml  readme.md
.cargo/: config
assets/: log4rs.yaml
assets/maps/demo/: map.tmx
quail_game/: Cargo.toml
quail_game/src/: main.rs
src/: application.rs  camera_plugin.rs  game_plugin.rs  lib.rs  main.rs  map_plugin.rs
