[package]
name = "quail"
version = "0.1.0"
authors = ["tal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = "0.13.0"
bevy = "0.5.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features = ["tiled_map"] }
